Adding jq effects to homepage, working on comments

--- a/guestbook.html
+++ b/guestbook.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="navbar-brand circle-badge-sm"></div>
-          <a class="navbar-brand fancy" href="#">Ashley & Joseph</a>
+          <a class="navbar-brand fancy" href="home.html">Ashley & Joseph</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse nav-right">
           <ul class="nav navbar-nav">
@@ -70,6 +70,7 @@
                 <input type="email" id="email" name="email" ng-model="email" placeholder="Email"></input>
                 <textarea id="message" name="message" ng-model="message" placeholder="Enter your message for the happy couple"></textarea>
                 <input class="btn btn-primary" type="submit" id="submit-comment" name="submit-comment" value="Submit"></input>
+                <input class="btn btn-danger" type="reset" id="reset-comment" name="reset-comment" value="Reset">
               </form>
           </div>
 <!--           Preview<br />
