--- a/guestbook.html
+++ b/guestbook.html
@@ -44,7 +44,7 @@
         <div id="navbar" class="collapse navbar-collapse nav-right">
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
-            <li class="active"><a href="details.html">Details</a></li>
+            <li><a href="details.html">Details</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
             <li><a href="rsvp.html">RSVP</a></li>
           </ul>
