--- a/home.html
+++ b/home.html
@@ -60,8 +60,10 @@
         <div class='main-name fancy lg' id="and-title">&</div>
         <div class='main-name fancy lg' id="ash-title">Ashley Owen Boyle</div>
       </p>
-        <p>Request your presence at the ceremony & celebration of their marriage.<br />Saturday, September 12, 2015 at Bladberry Farm in Portland, Oregon</p>
-        <div class="badge-row">
+
+        <p id="request-text">Request your presence at the ceremony & celebration of their marriage.<br />Saturday, September 12, 2015 at Bladberry Farm in Portland, Oregon</p>
+
+        <div class="badge-row" id="badge-row">
           <a href="rsvp.html">
             <div class="sub-circle-text">
               <div class="circle-badge-crested-lg"></div>
@@ -80,9 +82,10 @@
               Contact
             </div>
           </a>
-      </div>
-      Don't forget to <a href="guestbook.html">Sign Our Guestbook</a><br />
-      <small>Or just stalk other people's comments, that's cool too</small>
+        </div>
+
+      <p id="final-fade">Don't forget to <a href="guestbook.html">Sign Our Guestbook</a><br />
+      <small>Or just stalk other people's comments, that's cool too</small></p>
     </div>
 
     <!-- Contact Modal -->
@@ -125,16 +128,21 @@
     <script src="assets/js/ie10-bug-workaround.js"></script>
     <script>
     $(document).ready(function() {
-        var timer0 = setTimeout(function() {
-          $('#joe-title').fadeIn(1000).css('visibility', 'visible');
-        }, 1000);
-        var timer1 = setTimeout(function() {
-          $('#and-title').fadeIn(1000).css('visibility', 'visible');
-        }, 2000);
-        var timer2 = setTimeout(function() {
-          $('#ash-title').fadeIn(1000).css('visibility', 'visible');
-        }, 3000);
-    });
+        $('#joe-title').fadeTo(1000, 1.0, function() {
+          $('#and-title').fadeTo(1000, 1.0, function() {
+            $('#ash-title').fadeTo(1000, 1.0, function() {
+              $('#request-text').fadeTo(1500, 1.0, function() {
+                var timer0 = setTimeout(function() {
+                  $('#badge-row').fadeTo(2000, 1.0);
+                }, 1500);
+                var timer1 = setTimeout(function() {
+                  $('#final-fade').fadeTo(2500, 1.0);
+                }, 3000);
+              });
+            });
+          });
+        });
+      });
     </script>
   </body>
 </html>
