--- a/details.html
+++ b/details.html
@@ -75,6 +75,7 @@
               <li>The <a href="http://www.silvercloud.com/portland/">Silver Cloud Inn</a> is closest to the wedding venue, but still walkable to trendy 23rd street.  And close to Forest Park if you want to run or explore.</li>
               <li>If, like the groom, you prefer the anonymity of a major chain (as well as the free continental breakfast), the <a href="http://www.hiexpress.com/hotels/us/en/portland/pdxor/hoteldetail?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn&qChld=0&qFRA=1&qGRM=0&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=12&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99504425&siclientid=10073&sitrackingid=694721510&dp=true&icdv=99504425">NW Holiday Inn Express</a> might be right up your alley!</li>
             </ul>
+            Be sure to check services like <a href="http://www.airbnb.com">airbnb</a> or <a href="http://www.vrbo.com">vrbo</a> for other options!
         </div>
         </div>
 
