--- a/rsvp.html
+++ b/rsvp.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
 
-  <body class="flower">
+  <body>
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="navbar-brand circle-badge-sm"></div>
-          <a class="navbar-brand fancy" href="#">Ashley & Joseph</a>
+          <a class="navbar-brand fancy" href="home.html">Ashley & Joseph</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse nav-right">
           <ul class="nav navbar-nav">
@@ -57,8 +57,44 @@
       </div>
     </div>
 
-    <p align="center">Coming soon!</p>
-    <p align="center">In the meantime, just email joedriscoll79@gmail.com to RSVP</p>
+    <div class="panel panel-info center">
+      <div class="panel-heading">
+        <h1 class="panel-title">Can you join us?</h1>
+      </div>
+      <div class="form-center">
+        <form id="rsvp" name="rsvp" action="">
+          <table width="100%">
+            <tr>
+              <td valign="top" width="50%">Your Name<br />
+          <input id="rname" name="rname" type="text"></input>
+              </td>
+              <td valign="top" width="50%">Your Email<br />
+          <input id="remail" name="remail" type="email"></input>
+              </td>
+            </tr>
+          </table>
+          Can you make it?<br />
+          <input id="rresponsey" name="rresponse" type="radio" value="y">Yes- I will be attending&nbsp;&nbsp;
+          <input id="rresponsen" name="rresponse" type="radio" value="n">No- I can't make it<br />
+         <div id="yes-response">
+          <div class="positive">Awesome!  Can't wait to see you...<br />
+          <small>Please fill in the rest of the form so we can get your info.</small></div>
+           Number of Attendees&nbsp;&nbsp;<select id="rnumber" name="rnumber">
+              <option value="1">One</option>
+              <option value="2">Two</option>
+            </select><br />
+            Any Questions, concerns, comments?<br />
+            <textarea id="rmessage" name="rmessage"></textarea>
+            <input class="btn btn-primary" type="submit" value="Submit"></input>
+          </div>
+          <div id="no-response">
+            <div class="negative">Too bad!  But thanks for responding...<br />
+            <small>Please click the 'submit' button to confirm</small></div>
+            <input class="btn btn-primary" type="submit" value="Submit"></input>
+          </div>
+        </form>
+      </div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -98,5 +134,24 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-bug-workaround.js"></script>
+
+    <script type="text/javascript">
+    $(document).ready(function() {
+      var attend;
+      $('input[name="rresponse"]').change(function() {
+        attend = $('input[name="rresponse"]:checked').val();
+        if(attend === 'y') {
+          $('#no-response').hide();
+          $('#yes-response').slideDown();
+          $('.form-center').css('border', '1px solid green');
+        } else if(attend === 'n') {
+          $('#yes-response').hide();
+          $('#no-response').slideDown();
+          $('.form-center').css('border', '1px solid red');
+        }
+      });
+    });
+    </script>
+
   </body>
 </html>
