Minor fixes to colors and wording

--- a/details.html
+++ b/details.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS and custom styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Tangerine|Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Tangerine|Lora' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
             <li class="active"><a href="details.html">Details</a></li>
+            <li><a href="guestbook.html">Guestbook</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
             <li><a href="rsvp.html">RSVP</a></li>
           </ul>
@@ -61,7 +62,7 @@
         <div class="main-row">
         <div class="main-fifty">
           <u><h3>Find Us</u>&nbsp;&nbsp;&nbsp;<small>Directions to the farm</small></h3>
-          The wedding will be held at Bladberry Farm on Sauvie Island.  It's a beautiful, quiet place without a website, but can be found usng the Google Map below<br />
+          The wedding will be held at Bladberry Farm on Sauvie Island.  It's a beautiful, quiet place without a website, but can be found using the Google Map below<br />
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5579.582073245346!2d-122.794273!3d45.63493400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5495a9c2d78a7d7d%3A0x7ae55931e8bff377!2s15620+NW+Gillihan+Rd%2C+Portland%2C+OR+97231!5e0!3m2!1sen!2sus!4v1426120505139" width="100%" height="300" style="border-radius: 5px;" frameborder="0" style="border:0"></iframe>
         </div>
 
@@ -88,7 +89,7 @@
             <ul>
               <li><a href="http://www.powells.com">Powell's City of Books</a>- an entire city block of books!</li>
               <li>Coming in on Thursday the 9th?  Plan ahead and get tickets to a <a href="http://www.timbers.com">Timbers home game</a> (buy early or take your chances)!</li>
-              <li><a href="https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID=127">Forest Park</a> is the biggest urban greenspace blah blah blah- it's cool.  Go for a jog or hike and be astounded at trees and dirt!</li>
+              <li><a href="https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID=127">Forest Park</a> is the biggest urban greenspace in the US- it's cool.  Go for a jog or hike and be astounded by trees and dirt!</li>
               <li>If you're in town for a few days, a short drive to Mt. Hood's <a href="http://www.timberlinelodge.com">Timberline Lodge</a> won't disappoint.</li>
             </ul>
         </div>
@@ -101,7 +102,6 @@
             <ul>
               <li><a href="http://www.rei.com/GiftRegistryDetails/GR112988753">REI</li>
               <li><a href="http://www.crateandbarrel.com/gift-registry/ashley-boyle-and-joe-driscoll/r5309424">Crate and Barrel</a></li>
-              <li>Casa Diablo (just kidding)</li>
             </ul>
         </div>
         </div>
