--- a/guestbook.html
+++ b/guestbook.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap core CSS and custom styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Tangerine|Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Tangerine|Lora' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,6 +45,7 @@
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="details.html">Details</a></li>
+            <li class="active"><a href="guestbook.html">Guestbook</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
             <li><a href="rsvp.html">RSVP</a></li>
           </ul>
