--- a/home.html
+++ b/home.html
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="home.html">Home</a></li>
             <li><a href="details.html">Details</a></li>
+            <li><a href="guestbook.html">Guestbook</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
             <li><a href="rsvp.html">RSVP</a></li>
           </ul>
