--- a/rsvp.html
+++ b/rsvp.html
@@ -15,7 +15,7 @@
     <!-- Bootstrap core CSS and custom styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Tangerine|Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Tangerine|Lora' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body class="flower">
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="details.html">Details</a></li>
+            <li><a href="guestbook.html">Guestbook</a></li>
             <li data-toggle="modal" data-target="#myModal"><a class="pointer">Contact</a></li>
             <li class="active"><a href="rsvp.html">RSVP</a></li>
           </ul>
@@ -82,7 +83,10 @@
            Number of Attendees&nbsp;&nbsp;<select id="rnumber" name="rnumber">
               <option value="1">One</option>
               <option value="2">Two</option>
-            </select><br />
+            </select>
+            <br />
+            Any food allergies or special needs?<br />
+            <textarea id="specialneeds" name="specialneeds"></textarea>
             Any Questions, concerns, comments?<br />
             <textarea id="rmessage" name="rmessage"></textarea>
             <input class="btn btn-primary" type="submit" value="Submit"></input>
@@ -143,11 +147,9 @@
         if(attend === 'y') {
           $('#no-response').hide();
           $('#yes-response').slideDown();
-          $('.form-center').css('border', '1px solid green');
         } else if(attend === 'n') {
           $('#yes-response').hide();
           $('#no-response').slideDown();
-          $('.form-center').css('border', '1px solid red');
         }
       });
     });
