Fixed some responsive issues with rsvp form

--- a/rsvp.html
+++ b/rsvp.html
@@ -24,7 +24,7 @@
     <![endif]-->
   </head>
 
-  <body class="flower">
+  <body>
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
