Integrated Google Form to rsvp section

--- a/rsvpGoogle.html
+++ b/rsvpGoogle.html
@@ -58,16 +58,16 @@
       </div>
     </div>
 
-<!--     <div class="panel panel-info center">
-      <div class="panel-heading"> -->
-<!--         <h2 class="center">Can you join us?</h2> -->
-<!--       </div> -->
+    <div class="panel panel-info center">
+      <div class="panel-heading">
+        <h1 class="panel-title">Can you join us?</h1>
+      </div>
 
     <div class="form-center">
 
     <form action="https://docs.google.com/forms/d/1oV1Pamx504Ywrm6RQ6wVafLFsEPKnsVM6YNi24jtqT4/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
 
-<!--     <ol role="list" class="ss-question-list" style="padding-left: 0"> -->
+    <ol role="list" class="ss-question-list" style="padding-left: 0">
 <!--     <div class="ss-form-question errorbox-good" role="listitem">
     <div dir="ltr" class="ss-item ss-item-required ss-text">
     <div class="ss-form-entry"> -->
@@ -131,11 +131,10 @@
     <div class="ss-q-title">How many will be attending?</div>
     </label>
     <select name="entry.235417759" id="entry_235417759" aria-label="How many will be attending?  ">
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
+        <option value="One">One</option>
+        <option value="Two">Two</option>
+        <option value="Three">Three</option>
+        <option value="Four">Four</option>
     </select>
 <!--     </div></div></div> -->
 <br />
@@ -193,10 +192,9 @@
     </tbody>
     </table>
     </div> -->
-<!--     </ol> -->
+    </ol>
     </form>
     </div>
-    <br />
 
 <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
