Finished comment system

--- a/guestbook.html
+++ b/guestbook.html
@@ -81,31 +81,35 @@
 
               <?php
               //local connection
-              $con = mysqli_connect('localhost', 'root', 'jcd2829', 'wedding');
-              //production database - coming soon
-              //$con = mysqli_connect();
+              //$con = mysqli_connect('localhost', 'root', 'jcd2829', 'wedding');
+              //production database
+              $con = mysqli_connect('104.236.39.224:3306', 'root', 'aobjcdpdx', 'guestbook');
 
               $result = mysqli_query($con, "SELECT * FROM comments ORDER BY created_on DESC");
-              $num = mysqli_num_rows($result);
+              if($result) {
+                $num = mysqli_num_rows($result);
 
-              if($num == 0) {
-                print "<div class='comment-wrapper'>";
-                  print "<div class='comment-text'>";
-                  print "No comments yet- be the first to add one!";
-                  print "</div>";
-                print "</div>";
-              } else {
-
-                while ($comments = mysqli_fetch_array($result)) {
+                if($num == 0) {
                   print "<div class='comment-wrapper'>";
                     print "<div class='comment-text'>";
-                    print $comments['comment_message'];
-                    print "</div>";
-                    print "<div class='comment-author'>";
-                    print "Left By: " . $comments['comment_name'];
+                    print "No comments yet- be the first to add one!";
                     print "</div>";
                   print "</div>";
+                } else {
+
+                  while ($comments = mysqli_fetch_array($result)) {
+                    print "<div class='comment-wrapper'>";
+                      print "<div class='comment-text'>";
+                      print $comments['comment_message'];
+                      print "</div>";
+                      print "<div class='comment-author'>";
+                      print "Left By: " . $comments['comment_name'];
+                      print "</div>";
+                    print "</div>";
+                  }
                 }
+              } else {
+                print "Error connecting to db - Sorry!" . mysqli_connect_error();
               }
               ?>
 
