--- a/rsvp.html
+++ b/rsvp.html
@@ -170,8 +170,10 @@
         <div id="no-response">
             <div class="negative">Too bad!  But thanks for responding...<br />
             <small>Please click the 'submit' button to confirm</small>
-            </div>
+            <br />
             <input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action btn btn-primary">
+            </div>
+            <div class="neg-image"><img src="assets/images/liljoe.jpg" alt="Sad Joe" /></div>
         </div>
 <!--     </td>
     </tr>
