Fixing contact form, reorg homepage

--- a/index.html
+++ b/index.html
@@ -68,51 +68,52 @@
 
         <div class="badge-row" id="badge-row">
           <a href="rsvp.html">
-            <div class="sub-circle-text">
-              <div class="circle-badge-crested-lg"></div>
-              Rsvp
+            <div class="circle-badge-crested-lg">
+              <div class="sub-circle-text">Rsvp</div>
             </div>
           </a>
           <a href="details.html">
-            <div class="sub-circle-text">
-              <div class="circle-badge-adams-lg"></div>
-              Details
+            <div class="circle-badge-adams-lg">
+                <div class="sub-circle-text">Details</div>
             </div>
           </a>
-          <a class="pointer" data-toggle="modal" data-target="#myModal">
-            <div class="sub-circle-text">
-              <div class="circle-badge-wallowas-lg"></div>
-              Contact
+          <a href="guestbook.html">
+            <div class="circle-badge-wallowas-lg">
+                <div class="sub-circle-text">Guestbook</div>
             </div>
           </a>
         </div>
-
-      <p id="final-fade">Don't forget to <a href="guestbook.html">Sign Our Guestbook</a><br />
-      </p>
     </div>
 
-    <!-- Contact Modal -->
+<!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title fancy lg vertshrink" id="myModalLabel">Contact Us</h4>
-            <small>Questions?  Concerns?  Fill out the form below!</small>
-          </div>
-          <div class="modal-body">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title fancy lg vertshrink" id="myModalLabel">Contact Us</h4>
+              <small>Questions?  Concerns?  Fill out the form below!</small>
+            </div>
 
-            <form id="contact" name="contact" action="contactus.php" method="POST" novalidate>
-              <input type="text" id="name" name="name" placeholder="Name"></input>
-              <input type="email" id="email" name="email" placeholder="Email"></input>
-              <textarea id="message" name="message" placeholder="How can we help?"></textarea>
+              <div id="contact-thanks" class="center">
+                <p id="contact-results"></p>
+                <img id="hide-small" src="assets/images/joeashlaughingSM.jpg" alt="Ha Ha Ha" />
+              </div>
 
-                </div>
-          <div class="modal-footer">
-              <input class="btn btn-danger float-left" id="cancel" type="reset" value="Cancel" data-dismiss="modal"></button>
-              <input class="btn btn-success" id="submit" name="submit" type="submit" value="Contact Us"></button>
-            </form>
-          </div>
+            <div id="contact-form">
+              <div class="modal-body">
+                <form id="contact" name="contact" method="POST" target="_self" enctype="multipart/form-data" action="contactus.php" onsubmit="" novalidate>
+                  <input type="text" id="name" name="name" placeholder="Name"></input>
+                  <input type="email" id="email" name="email" placeholder="Email"></input>
+                  <textarea id="message" name="message" placeholder="How can we help?"></textarea>
+              </div>
+
+              <div class="modal-footer">
+                  <input class="btn btn-danger float-left" id="cancel" type="reset" value="Cancel" data-dismiss="modal"></button>
+                  <input class="btn btn-success" id="submit" name="submit" type="submit" value="Contact Us"></button>
+                </form>
+              </div>
+            </div>
         </div>
       </div>
     </div>
@@ -132,7 +133,7 @@
     <script>
     $(document).ready(function() {
       $('#skip').on('click', function() {
-        $('#joe-title, #and-title, #ash-title, #request-text, #badge-row, #final-fade').css('opacity', '1.0');
+        $('#joe-title, #and-title, #ash-title, #request-text, #badge-row').css('opacity', '1.0');
         $(this).hide();
       });
 
@@ -142,16 +143,40 @@
               $('#request-text').fadeTo(1500, 1.0, function() {
                 var timer0 = setTimeout(function() {
                   $('#badge-row').fadeTo(2000, 1.0);
-                }, 1500);
-                var timer1 = setTimeout(function() {
-                  $('#final-fade').fadeTo(2500, 1.0);
                   $('.skip').fadeOut(2000);
-                }, 3000);
+                }, 1500);
               });
             });
           });
         });
       });
+
+    //contact form submission
+    $('#contact').on('submit', function(e) {
+      e.preventDefault();
+
+      $.ajax({
+        type: 'post',
+        url: 'contactus.php',
+        data: $('#contact').serialize(),
+        success: function(result) {
+          $('#contact-form').fadeOut(500, function() {
+            $('#contact-results').html(result);
+            $('#contact-thanks').fadeIn(500);
+          });
+          var timerContact = setTimeout(function() {
+            $('#myModal').modal('hide');
+          }, 7000);
+        }
+      });
+
+    });
+
+    $('#myModal').on('hidden.bs.modal', function() {
+      $('#contact-thanks').hide();
+      document.getElementById('contact').reset();
+      $('#contact-form').show();
+    });
     </script>
   </body>
 </html>
