Still trying to fix contact form

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class='main-name fancy lg' id="ash-title">Ashley Owen Boyle</div>
       </p>
 
-        <p id="request-text">Request your presence at the ceremony & celebration of their marriage.<br />Saturday, September 12, 2015 at Bladberry Farm in Portland, Oregon</p>
+        <p id="request-text">Request your presence at the ceremony & celebration of their marriage.<br />Saturday, September 12, 2015, 4:30pm at Bladberry Farm in Portland, Oregon</p>
 
         <div class="badge-row" id="badge-row">
           <a href="rsvp.html">
